@@ -834,7 +834,7 @@ CONFIG_FEATURE_WGET_STATUSBAR=y
 CONFIG_FEATURE_WGET_AUTHENTICATION=y
 CONFIG_FEATURE_WGET_LONG_OPTIONS=y
 CONFIG_FEATURE_WGET_TIMEOUT=y
-# CONFIG_ZCIP is not set
+CONFIG_ZCIP=y
 
 #
 # Print Utilities
