@@ -239,6 +239,16 @@ get_txqlen()
     fi
 }
 
+zero_conf()
+{
+    vpnPurePPPOE=`nvram_get 2860 vpnPurePPPOE`
+    wan_is_not_null=`ip addr show $wan_if | grep inet -c`
+    if [ "$wan_is_not_null" = "0" ] || [ "$vpnPurePPPOE" = "1" ]; then
+	$LOG "Call zeroconf for get wan ip address."
+	zcip -q $wan_if /etc/scripts/zcip.script > /dev/null 2>&1
+    fi
+}
+
 # get params
 getLanIfName
 getLan2IfName
